* Fixed text color of disabled inputs on iOS Safari

--- a/src/view/css/app.scss
+++ b/src/view/css/app.scss
@@ -147,6 +147,7 @@ label {
 
 .stretch-input[disabled] {
   color: var(--input-disabled-text-color);
+  -webkit-text-fill-color: var(--input-disabled-text-color);
   border-color: var(--input-disabled-border-color);
   background-color: var(--input-disabled-bg-color);
 }
